--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-/node_modules
+# Ignore node_modules in all subdirectories
+node_modules/
+
+# explicitly ignore backend and frontend node_modules
+backend/node_modules/
+frontend/node_modules/
